--- a/index.html
+++ b/index.html
@@ -17,21 +17,20 @@
     <nav class="nav-bar">
       <a href="index.html" class="active">Home</a>
       <a href="boohoo.html">Projects</a>
-      <a href="#process">About</a>
-      <a href="#contact">Contact</a>
+      <a href="">About</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <section class="bio">
     <div>
-      <p class="introduction">Hello,</p>
-      <p class="introduction">this is Geon Ko</p>
+      <h1 class="introduction">Hello, this is Geon Ko</h1>
 
       <p id="description">
-        I am a game developer, completing my science degree at Simon Fraser University.
+        I am a game developer / designer, completing my science degree at Simon Fraser University.
         I focus on taking small ideas and expanding them to be something admirable. 
         Seeing these journeys and progress is what makes this gaming industry enjoyable 
-        for me.
+        for me. My key strength of programs consist of Java, Javscript, Processing and Python.
       </p>
 
       <a href="boohoo.html" class="view-work">View my work</a>
@@ -52,11 +51,11 @@
 
   <section id="projects" class="projects">
   <h2>Projects</h2>
-  
+
   <div class="projects-container">
     <div class="project-box">
         <div class="window-bar">ghost-chaser.html</div>
-        <h3>Ghost Chaser</h3>
+        <h3>Boo Hoo</h3>
         <p>A 2D game where players use a flashlight to reveal ghosts. I designed movement, AI, and light systems.</p>
         <a class="btn-small" href="boohoo.html">View Project</a>
     </div>
@@ -76,10 +75,6 @@
     </div>
   </div>
 </section>
-
-  <footer id="contact" class="footer">
-    <p>© 2025 Geon Ko</p>
-  </footer>
 
 </body>
 </html>
