contact page + changes

--- a/boohoo.html
+++ b/boohoo.html
@@ -153,11 +153,18 @@
 
   <!-- SECTION 5 -->
   <section class="process-section">
-    <h2>06 — Reflection</h2>
+    <h2>06 — Reflection + Future</h2>
     <p>
       Through this project, I strengthened my understanding of game loops, state machines, 
-      collision detection, and responsive UI design. 
-      I also learned the importance of testing mechanic readability early in development.
+      collision detection, and responsive UI design. Each components played a essential part
+      in making the game enjoyable for everyone. 
+    </p>
+
+    <p>
+      For next time, I think it would be best to craete a higher fidelity model to 
+      really layout all the mechanics and visual design, thus, less issues will occur.
+      Final visuals designs could have been drawn with more detail and should have been
+      thought out more as they are equally important as mechanics.
     </p>
 
 
