--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,12 @@
   </header>
 
   <section class="contact-hero">
-    <h1 class="contact-heading">Contact us</h1>
+    <h1 class="contact-heading">Contact Me</h1>
   </section>
 
   <p class="contact-text">If you have questions or need any general information, please contact via email or 
-    phone number (250-986-8978).
+    phone number (250-986-8978). I am always open for discussion, collaboration or any kind of oppurtunity.
+
   </p>
 
   <section class="contact-info-row">
@@ -57,8 +58,8 @@
 
     <div class="info-column">
       <p class="info-title">SOCIAL / LINKS</p>
-      <p><a href="#" class="contact-link">GitHub</a></p>
-      <p><a href="#" class="contact-link">Itch.io</a></p>
+      <p><a href="https://github.com/rhrjsko/Portfolio.git" target="_blank" class="contact-link">GitHub</a></p>
+      <p><a href="#" class="contact-link">Instagram</a></p>
       <p><a href="#" class="contact-link">LinkedIn</a></p>
       <p><a href="boohoo.html" class="contact-link">Ghost Chaser Process →</a></p>
     </div>
