--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 </head>
 
 <body>
-  <header>
+  <header class="site-header">
+    <div class="brand">
+      <div class="brand-mark">GK</div>
+      <div class="brand-text">
+        <p class="brand-name">Geon Ko</p>
+        <p class="brand-role">Game Developer / Designer</p>
+      </div>
+    </div>
+      
     <nav class="nav-bar">
       <a href="index.html" class="active">Home</a>
       <a href="boohoo.html">Projects</a>
@@ -35,15 +43,17 @@
 
       <a href="boohoo.html" class="view-work">View my work</a>
     </div>
-      <img src="img/background.png" alt="Portrait of Geon Ko" class="bio-img">
-
+    <video class="bio-video" autoplay muted loop playsinline>
+      <source src="videos/backgroundplay.mp4" type="video/mp4">
+    </video>
   </section>
 
   <section class="quick-links">
     <h2>Shortcuts</h2>
     <div class="quick-grid">
-      <a href="#projects">Play →</a>
-      <a href="#about">Github →</a>
+      <a href="game/E101_Geon_Ko_Final_Assignment4_301592740.zip" class="play-btn" download>
+     Download → </a>
+      <a href="https://github.com/rhrjsko/Portfolio.git" target="_blank">GitHub →</a>
       <a href="#process">Resume →</a>
       <a href="#contact">Citation →</a>
     </div>
@@ -54,23 +64,27 @@
 
   <div class="projects-container">
     <div class="project-box">
-        <div class="window-bar">ghost-chaser.html</div>
+        <div class="window-bar">boohoo.java</div>
         <h3>Boo Hoo</h3>
         <p>A 2D game where players use a flashlight to reveal ghosts. I designed movement, AI, and light systems.</p>
         <a class="btn-small" href="boohoo.html">View Project</a>
     </div>
 
     <div class="project-box">
-      <div class="window-bar">sandworm-sim.html</div>
+      <div class="window-bar">sandworm-sim.java</div>
       <h3>SandWorm Ecosystem</h3>
-      <p>A Java-based predator-prey simulation using FSM and energy models.</p>
+      <p>A Java-based predator-prey simulation using FSM and energy models.
+        Prey, Predator and Hunter acts in a cycle.
+      </p>
       <a class="btn-small" href="#">View Project</a>
     </div>
 
     <div class="project-box">
       <div class="window-bar">moonlit-ui.html</div>
       <h3>Moonlit Treasures UI</h3>
-      <p>Fantasy UI design inspired by RPG menus, focused on clarity and interactions.</p>
+      <p>A vintage jewelry website, created with accessible UI design and. various interactions.
+
+      </p>
       <a class="btn-small" href="#">View Project</a>
     </div>
   </div>
