--- a/contact.html
+++ b/contact.html
@@ -5,20 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Geon Ko — Contact</title>
 
-  <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;600&display=swap">
 
-  <!-- Contact styles (dark + matches main page) -->
   <link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
-  <header>
+  <header class="site-header">
+    <div class="brand">
+      <div class="brand-mark">GK</div>
+      <div class="brand-text">
+        <p class="brand-name">Geon Ko</p>
+        <p class="brand-role">Game Developer / Designer</p>
+      </div>
+    </div>
+
     <nav class="nav-bar">
-      <a href="index.html">Home</a>
+      <a href="index.html" >Home</a>
       <a href="boohoo.html">Projects</a>
-      <a href="#about">About</a>
+      <a href="">About</a>
       <a href="contact.html" class="active">Contact</a>
     </nav>
   </header>
