--- a/boohoo.html
+++ b/boohoo.html
@@ -11,11 +11,19 @@
 </head>
 
 <body>
-  <header>
+  <header class="site-header">
+    <div class="brand">
+      <div class="brand-mark">GK</div>
+      <div class="brand-text">
+        <p class="brand-name">Geon Ko</p>
+        <p class="brand-role">Game Developer / Designer</p>
+      </div>
+    </div>
+
     <nav class="nav-bar">
-      <a href="index.html">Home</a>
+      <a href="index.html" >Home</a>
       <a href="boohoo.html" class="active">Projects</a>
-      <a href="#process">About</a>
+      <a href="">About</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -31,9 +39,9 @@
   <section class="process-section">
     <h2>01 — Concept & Goals</h2>
     <p>
-      This project began with the idea of using jumpscare and loud noises to create and intense experience. 
-      I wanted players to rely on their flashlight to stun ghosts without getting touched. 
-      My goal was to balance fear, timing, and exploration while keeping gameplay readable and simple.
+        This project began with the idea of using jumpscare and loud noises to create and intense experience. 
+        I wanted players to rely on their flashlight to stun ghosts without getting touched. 
+        My goal was to balance fear, timing, and exploration while keeping gameplay readable and simple.
     </p>
 
     <div class="image-grid">
@@ -126,10 +134,6 @@
 
     </div>
 
-  </section>
-
-  <section>
-    <h2> </h2>
   </section>
 
   <section class="process-section">
