--- a/boohoo.html
+++ b/boohoo.html
@@ -23,12 +23,12 @@
     <nav class="nav-bar">
       <a href="index.html" >Home</a>
       <a href="boohoo.html" class="active">Projects</a>
-      <a href="">About</a>
+      <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <section class="process-header">
+  <section class="process-title">
     <h1 class="game-title">Boo Hoo — Process Analysis</h1>
     <p class="game-description">A thrilling horror game, intended to scare users
         with various traps, enemies and stages. Main goal is to avoid all enemies
@@ -56,7 +56,6 @@
     </div>
   </section>
 
-  <!-- SECTION 2 -->
   <section class="process-section">
     <h2>02 — Movement Prototype</h2>
     <p>Movements were tested out with keyboard controls as well as arrow key.
@@ -83,26 +82,23 @@
     </p>
 
     <div class="enemy-grid">
-        
-        <div class="enemy-container">
+      <div class="enemy-container">
         <img src="img/ghost.png" alt="Ghost enemy" class="process-img">
         <p class="caption">* Ghost — fast, chase-based enemy.</p>
-        </div>
+      </div>
 
-        <div class="enemy-container">
+      <div class="enemy-container">
         <img src="img/zombie.png" alt="Zombie enemy" class="process-img">
         <p class="caption">* Zombie — Longer chase-drive, chase-based enemy</p>
-        </div>
+      </div>
 
-        <div class="enemy-container">
+      <div class="enemy-container">
         <img src="img/arrow.PNG" alt="Arrow trap" class="process-img">
         <p class="caption">* Arrow Trap — fires every few seconds at random x-axis.</p>
-        </div>
-
+      </div>
     </div>
   </section>
 
-<!-- SECTION 4 -->
   <section class="process-section">
     <h2>04 — Flashlight System + Jumpscare</h2>
     <p>
@@ -110,30 +106,25 @@
         would stun enemies when shinet at the target. SPACE BAR turns on the flashlight on and off.
         Turning the flashlight on lowers the battery and shortens duration. 
     </p>
-
     <p>
         Jumpscare is a sudden reaction that swtiches on when user is in contact with the player.
         A scary image as well as loud screaming noise is intended to frighten user
     </p>
-
     <div class="image-grid">
-
-        <div class="image-container">
+      <div class="image-container">
         <video class="process-video" controls muted playsinline>
-            <source src="videos/flashlighttest.mp4" type="video/mp4">
+        <source src="videos/flashlighttest.mp4" type="video/mp4">
         </video>
         <p class="caption">* Flashlight cone visibility test.</p>
-        </div>
+      </div>
 
-        <div class="image-container">
+      <div class="image-container">
         <video class="process-video" controls muted playsinline>
-            <source src="videos/jumpscaretest.mp4" type="video/mp4">
+        <source src="videos/jumpscaretest.mp4" type="video/mp4">
         </video>
         <p class="caption">* Jumpscare & sound test.</p>
-        </div>
-
+      </div>
     </div>
-
   </section>
 
   <section class="process-section">
@@ -155,7 +146,6 @@
     </div>
   </section>
 
-  <!-- SECTION 5 -->
   <section class="process-section">
     <h2>06 — Reflection + Future</h2>
     <p>
@@ -170,8 +160,6 @@
       Final visuals designs could have been drawn with more detail and should have been
       thought out more as they are equally important as mechanics.
     </p>
-
-
   </section>
 
   
