--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="nav-bar">
       <a href="index.html" class="active">Home</a>
       <a href="boohoo.html">Projects</a>
-      <a href="">About</a>
+      <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -38,7 +38,8 @@
         I am a game developer / designer, completing my science degree at Simon Fraser University.
         I focus on taking small ideas and expanding them to be something admirable. 
         Seeing these journeys and progress is what makes this gaming industry enjoyable 
-        for me. My key strength of programs consist of Java, Javscript, Processing and Python.
+        for me. I hope to become part of 
+        My key strength of programs consist of Java, Javscript, Processing and Python.
       </p>
 
       <a href="boohoo.html" class="view-work">View my work</a>
