--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,15 @@
     </div>
 
     <nav class="nav-bar">
-      <a href="index.html" >Home</a>
+      <a href="index.html">Home</a>
       <a href="boohoo.html">Projects</a>
-      <a href="">About</a>
+      <a href="about.html">About</a>
       <a href="contact.html" class="active">Contact</a>
     </nav>
   </header>
 
-  <section class="contact-hero">
-    <h1 class="contact-heading">Contact Me</h1>
+  <section class="contact">
+    <h1 class="contact-title">Contact Me</h1>
   </section>
 
   <p class="contact-text">If you have questions or need any general information, please contact via email or 
@@ -49,7 +49,7 @@
       <p>lewisko8978@gmail.com</p>
 
       <p class="info-label">Availability</p>
-      <p>Monday – Friday · 9 AM – 5 PM (PST)</p>
+      <p>Monday - Friday · 9 AM - 5 PM (PST)</p>
     </div>
 
     <div class="info-column">
