--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <main class="about-page">
     <section class="about-grid">
       <div class="myself">
-        <h1 class="about-title">About Geon</h1>
+        <h1 class="about-title">About Myself</h1>
         <p class="about-description">
             I am a game developer / designer, completing my science degree at Simon Fraser University.
             I focus on taking small ideas and expanding them to be something admirable. 
