--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Geon Ko — About</title>
-
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap">
 
@@ -13,15 +12,15 @@
 
 <body>
   <header class="site-header">
-    <div class="brand">
-      <div class="brand-mark">GK</div>
-      <div class="brand-text">
-        <p class="brand-name">Geon Ko</p>
-        <p class="brand-role">Game Developer / Designer</p>
+    <div class="logo" aria-label="Personal Name Brand Logo">
+      <div class="logo-mark">GK</div>
+      <div class="logo-text">
+        <p class="logo-name">Geon Ko</p>
+        <p class="logo-role">Game Developer / Designer</p>
       </div>
     </div>
 
-    <nav class="nav-bar">
+    <nav class="nav-bar" aria-label="Main naviation">
       <a href="index.html">Home</a>
       <a href="boohoo.html">Projects</a>
       <a href="about.html" class="active">About</a>
