--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,15 @@
 
 <body>
   <header class="site-header">
-    <div class="brand">
-      <div class="brand-mark">GK</div>
-      <div class="brand-text">
-        <p class="brand-name">Geon Ko</p>
-        <p class="brand-role">Game Developer / Designer</p>
+    <div class="logo" aria-label="Personal Name Brand Logo">
+      <div class="logo-mark">GK</div>
+      <div class="logo-text">
+        <p class="logo-name">Geon Ko</p>
+        <p class="logo-role">Game Developer / Designer</p>
       </div>
     </div>
 
-    <nav class="nav-bar">
+    <nav class="nav-bar" aria-label="Main naviation">
       <a href="index.html">Home</a>
       <a href="boohoo.html">Projects</a>
       <a href="about.html">About</a>
@@ -40,6 +40,8 @@
 
   <section class="contact-info-row">
     <div class="info-column">
+      <h2>Contact information</h2>
+
       <p class="info-title">GENERAL ENQUIRIES</p>
       <p class="info-name">Geon Ko</p>
       <p>Game Developer / Designer</p>
